# lgtoldes

./: README.md  environment.yml  setup.cfg  workspace.code-workspace
sandbox/: 001_basic_functions.ipynb  002_simple_stochastic_process.ipynb
sandbox/.ipynb_checkpoints/: 001_basic_functions-checkpoint.ipynb  002_simple_stochastic_process-checkpoint.ipynb
src/lgtoldes/: ITGradeTable.csv  itgrade.py  jtmodel.py
src/lgtoldes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lgtoldes/.ipynb_checkpoints/: jtmodel-checkpoint.py
src/lgtoldes/data/: Airbus landing gear model.json  Shiyang Liu final project.json  leg_fairing_est_frontier.csv  piston_model_v2.json
