[metadata]
# This is required for any package to install with a name
name = lgtoldes
# If you want to publish on PyPI then the following are also required
# https://daveshawley.medium.com/safely-using-setup-cfg-for-metadata-1babbe54c108
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
url = 
author = Windo Hutabarat
author_email = w.hutabarat@sheffield.ac.uk
# This is useful but not required
version = 0.0.1

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src